--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,6 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/nav_graph">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav_graph"
+    app:startDestination="@id/mainBuilding">
 
+    <fragment
+        android:id="@+id/mainBuilding"
+        android:name="com.xolary.ssuwtmap.mainBuilding.MainBuilding"
+        android:label="fragment_main_building"
+        tools:layout="@layout/fragment_main_building" />
+    <fragment
+        android:id="@+id/laborathoryBuilding"
+        android:name="com.xolary.ssuwtmap.laborathory.LaborathoryBuilding"
+        android:label="fragment_laborathory_building"
+        tools:layout="@layout/fragment_laborathory_building" />
+    <fragment
+        android:id="@+id/secondBuilding"
+        android:name="com.xolary.ssuwtmap.second.SecondBuilding"
+        android:label="fragment_second_building"
+        tools:layout="@layout/fragment_second_building" />
 </navigation>
