--- a/app/src/main/res/layout/fragment_main_building.xml
+++ b/app/src/main/res/layout/fragment_main_building.xml
@@ -34,6 +34,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
+                android:fontFamily="@font/noto_serif"
                 android:text="@string/header_main"
                 android:textColor="#2E2E2E"
                 android:textSize="18sp"
