Скрыта иконка QR-кода в TopApp Bar

--- a/app/src/main/res/layout/fragment_main_building.xml
+++ b/app/src/main/res/layout/fragment_main_building.xml
@@ -41,7 +41,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imageView"
                 app:layout_constraintTop_toTopOf="parent" />
-
+<!--
             <ImageView
                 android:id="@+id/qr_scanner"
                 android:layout_width="40dp"
@@ -50,7 +50,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/outline_qr_code_scanner_24" />
+                app:srcCompat="@drawable/outline_qr_code_scanner_24" />  -->
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <com.jsibbold.zoomage.ZoomageView
