Изменены шрифты, убран лишний код

--- a/app/src/main/res/layout/fragment_laboratory_building.xml
+++ b/app/src/main/res/layout/fragment_laboratory_building.xml
@@ -34,7 +34,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:fontFamily="@font/noto_serif"
+                android:fontFamily="@font/sf_pro_display_semibold"
                 android:text="@string/header_lab_full"
                 android:textColor="#2E2E2E"
                 android:textSize="18sp"
@@ -47,7 +47,7 @@
             android:id="@+id/floor_image"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:src="@drawable/zero_floor_lab"
+            android:src="@drawable/first_floor_lab"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
