--- a/app/src/main/res/layout/fragment_main_building.xml
+++ b/app/src/main/res/layout/fragment_main_building.xml
@@ -34,23 +34,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:fontFamily="@font/noto_serif"
+                android:fontFamily="@font/sf_pro_display_semibold"
                 android:text="@string/header_main"
                 android:textColor="#2E2E2E"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imageView"
                 app:layout_constraintTop_toTopOf="parent" />
-<!--
-            <ImageView
-                android:id="@+id/qr_scanner"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginEnd="15dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/outline_qr_code_scanner_24" />  -->
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <com.jsibbold.zoomage.ZoomageView
